# autoware-ml

./: .ansible-lint  .cspell-hook.json  .cspell-shared.json  .cspell.json  .gitignore  .pre-commit-config-ansible.yaml  .pre-commit-config-optional.yaml  .pre-commit-config.yaml  .wandbignore  AGENTS.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  package.json  pyproject.toml  set_data_path.sh  setup.py  useful_cmds.md  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  sync-files.yaml
.github/workflows/: build-and-test.yaml  clang-tidy-pr-comments-manually.yaml  clang-tidy-pr-comments.yaml  dco.yaml  docker-autoware-ml-publish.yml  docs.yml  require-build-and-test-label.yml  spell-check-daily.yaml  spell-check-differential.yaml
ansible/: README.md  galaxy.yml
ansible/playbooks/: setup_docker_host.yaml  setup_host.yaml  setup_local_host.yaml
ansible/roles/docker_engine/: README.md
ansible/roles/nvidia_cuda_toolkit/: README.md
ansible/roles/vscode/: README.md
autoware_ml/annotations/generators/: generator.py  generator_interface.py
autoware_ml/annotations/schemas/: records.py  schemas.py
autoware_ml/callbacks/: early_stopping.py
autoware_ml/cli/: __init__.py  cli.py  runtime.py
autoware_ml/common/enums/: enums.py
autoware_ml/configs/: __init__.py  paths.py  resolvers.py
autoware_ml/configs/annotations/: default_t4dataset_generator.yaml
autoware_ml/configs/datasets/: default_t4dataset_generator.yaml
autoware_ml/configs/defaults/: default_runtime.yaml
autoware_ml/configs/generators/: default_t4dataset_generator.yaml
autoware_ml/configs/logger/: wandb.yaml
autoware_ml/databases/: README.md  base_database.py  database_interface.py  scenarios.py  schemas.py
autoware_ml/databases/box3d_pipelines/: box3d_label_remapper.py  box3d_merger.py  box3d_pipeline.py  box3d_velocity_clip.py
autoware_ml/databases/boxes3d_pipelines/: box3d_pipeline.py
autoware_ml/databases/pipelines/: box3d_pipeline.py
autoware_ml/databases/schemas/: __init__.py  base_schemas.py  box3d_datamodel.py  box3d_metadata.py  box3d_schemas.py  category_mapping.py  dataset_schemas.py  frame_basic_metadata.py  lidar_frames.py  lidar_sources.py
autoware_ml/databases/t4dataset/: README.md  t4database.py  t4dataset.py  t4records_generator.py  t4sample_records.py  t4scenarios.py
autoware_ml/databases/t4datasets/: README.md  t4database.py  t4records_generator.py  t4scenarios.py
autoware_ml/datamodule/: base.py  collation.py  pipeline_context.py  samplers.py
autoware_ml/datamodule/coco/: __init__.py  detection2d.py
autoware_ml/datamodule/common/: detection3d.py  multiview_detection3d.py  point_cloud.py  sources.py
autoware_ml/datamodule/detection2d/: __init__.py  base.py
autoware_ml/datamodule/multi_task/: base_dataset_task.py  multi_task_base_dataset.py  multi_task_data_module.py
autoware_ml/datamodule/multi_tasks/: base_dataset_task.py  multi_task_base_dataset.py  multi_task_data_module.py  multi_task_dataset_interface.py
autoware_ml/datamodule/nuscenes/: __init__.py  calibration_status.py  common.py  detection3d.py  multiview_detection3d.py  segdet.py  segmentation3d.py
autoware_ml/datamodule/splitters/: dataset_record_splitter.py  splitter_interface.py
autoware_ml/datamodule/t4dataset/: __init__.py  calibration_status.py  detection3d.py  lidar_calibration_status.py  multiview_detection3d.py  segdet.py  segmentation3d.py
autoware_ml/datasets/generators/: dataset_generator.py  dataset_generator_interface.py
autoware_ml/datasets/schemas/: records.py  schemas.py
autoware_ml/geometry/: utils.py
autoware_ml/geometry/bbox_3d/: base_bbox3d.py  lidar_bbox3d.py
autoware_ml/geometry/points/: base_points.py  lidar_points.py
autoware_ml/losses/: __init__.py
autoware_ml/losses/detection3d/: focal.py  gaussian_focal.py
autoware_ml/metrics/: __init__.py  base.py  detection2d.py  detection3d.py  eval_mixin.py  segmentation3d.py
autoware_ml/models/: __init__.py  base.py
autoware_ml/ops/: README.md  __init__.py  build.py  setup.py
autoware_ml/preprocessing/: __init__.py  base.py
autoware_ml/scripts/: __init__.py  create_dataset.py  deploy.py  generate_annotations.py  generate_dataset.py  mlflow.py  mlflow_ui.py  session.py  test.py  train.py  visualize_detection2d.py
autoware_ml/tests/: __init__.py  conftest.py
autoware_ml/transforms/: __init__.py  base.py  geometry3d.py
autoware_ml/types/: dataset.py  geometry.py  sensor.py  spatial.py  tasks.py
autoware_ml/utils/: __init__.py  calibration.py  checkpoints.py  dataset.py  deploy.py  mlflow.py  mlflow_helpers.py  mlflow_store.py  onnx_modifiers.py  optimizer.py  runtime.py  session.py  tracking_helpers.py  wandb_helpers.py
autoware_ml/visualization/: __init__.py  detection2d.py
docker/: Dockerfile  build.sh  container.sh  entrypoint.sh  run.sh
docs/: index.md
docs/contributing/: adding-models.md  contribution-overview.md  pull-request-guidelines.md
docs/databases/: design.md  schemas.md  t4dataset.md
docs/design/: architecture_evaluation.md
docs/framework/: design.md  identity.md  metrics.md  troubleshooting.md
docs/getting-started/: devcontainer.md  installation.md  quickstart.md
docs/models/: bevfusion.md  calibration-status.md  centerpoint.md  frnet.md  ptv3.md  rtdetrv4.md  streampetr.md  transfusion.md
docs/release_note/: release_note.md  release_note_v0.md
docs/user-guide/: cli.md  configuration.md  deployment.md  mlflow.md  optuna.md  training.md  wandb.md
gemini/: .last_session.json  README.md  config.json  example_format.md  gui_project.md  lidar_visualizer_gui.py  project.md  requirements.txt  rerun_helpers.py
gemini/gicp_evaluation/: eval.sh  evaluate_gicp.py  evaluate_robustness.py  plot_results.py  print_runtime_stats.py
launch_jobs/rtdetrv4/: README.md  docker-queue-config.template.json  launch-agent.yaml  rtdetrv4_train_launch.sh
projects/MobileNetv2/: README.md
projects/YOLOX_opt/: README.md
tools/performance_tools/: README.md  onnx_to_tensorrt.py  tensorrt_time_measure.py  torch_time_measure.py
(+439 files in other folders)
