[build-system]
requires = ["setuptools", "torch", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoware-ml"
version = "0.0.0"
description = "Autoware-ML - Machine learning framework for Autoware."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Amadeusz Szymko", email = "amadeusz.szymko.2@tier4.jp"}]
keywords = ["autoware", "machine-learning", "autonomous-vehicle", "self-driving", "sensors"]
dependencies = [
    "cuda-python==12.8.0",
    # No official cp311 wheel exists for flash-attn 2.8.3+cu12+torch2.9 at Dao-AILab/flash-attention.
    # TODO: switch to https://github.com/Dao-AILab/flash-attention/releases once a matching official wheel is available.
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.9-cp311-cp311-linux_x86_64.whl#sha256=d4c842693349ef3e8b3b1396056003ecb9d21e94493dd1ea9ad6a2b3c6ce5c73",
    "hydra-core==1.3.2",
    # TODO: Use official release after https://github.com/facebookresearch/hydra/pull/3046 is merged
    "hydra-optuna-sweeper @ git+https://github.com/dahlem/hydra.git@feature/upgrade-optuna-4.2.1#subdirectory=plugins/hydra_optuna_sweeper",
    "lightning==2.6.1",
    "matplotlib==3.10.8",
    "mlflow==3.10.1",
    "numpy==1.26.4",
    "nuscenes-devkit==1.2.0",
    "optuna==4.8.0",
    "onnx==1.21.0",
    "onnx_graphsurgeon==0.5.8",
    "onnxruntime-gpu==1.24.4",
    "onnxscript==0.6.2",
    "opencv-python-headless==4.11.0.86",
    "optuna-dashboard==0.20.0",
    "polars>=1.38.1,<2.0.0",
    "pydantic>=2.12.5,<2.13.0",
    "pytest==9.0.2",
    "rerun-sdk==0.23.1",
    "scipy==1.17.1",
    "spconv-cu120==2.3.6",
    "t4-devkit @ git+https://github.com/tier4/t4-devkit.git@v0.6.0",
    "tensorrt-cu12==10.16.0.72",
    "torch==2.9.1+cu128",
    "torchvision==0.24.1+cu128",
    "transforms3d>=0.4.0",
    "polars==1.38.1",
    "pydantic==2.12.5"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "zensical",
]

[project.urls]
Homepage = "https://tier4.github.io/autoware-ml"
Source = "https://github.com/tier4/autoware-ml"

[project.scripts]
autoware-ml = "autoware_ml.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoware_ml*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
requires-pixi = ">=0.66"

[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }
cuda = "12.8"

[tool.pixi.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128", "https://pypi.nvidia.com"]
# Required because some packages are split across the PyTorch and NVIDIA indexes.
# For example, `cuda-python` appears on the PyTorch index without the pinned 12.8 build,
# so `first-index` would stop before considering the NVIDIA index.
index-strategy = "unsafe-best-match"

[tool.pixi.dependencies]
# Pixi keeps a small conda-forge base for Python and installer tooling. The
# runtime stack comes from [project.dependencies] via PyPI.
git = "*"
pip = "*"
python = "3.11.*"
setuptools = "*"
wheel = "*"

[tool.pixi.tasks]
install-project = "python -m pip install --no-cache-dir --no-build-isolation --no-deps -e ."
install-bash-completion = "bash -lc 'mkdir -p \"${HOME}/.local/share/bash-completion/completions\" && autoware-ml --show-completion bash > \"${HOME}/.local/share/bash-completion/completions/autoware-ml\"'"
setup-project = { depends-on = ["install-project", "install-bash-completion"] }
test = "pytest autoware_ml/tests/ -v"

# Full contributor environment on top of the default runtime/use stack.
[tool.pixi.feature.dev.dependencies]
bear = "*"
compilers = "*"
ninja = "*"
pkg-config = "*"
tmux = "*"

[tool.pixi.feature.dev.pypi-dependencies]
pre-commit = "*"
zensical = "*"

[tool.pixi.feature.dev.tasks]
docs = "zensical build --clean"

# Lightweight environment used by CI to build documentation only.
[tool.pixi.feature.docs.dependencies]
python = "3.11.*"

[tool.pixi.feature.docs.pypi-dependencies]
zensical = "*"

[tool.pixi.feature.docs.tasks]
docs = "zensical build --clean"

[tool.pixi.environments]
# Default env is the non-dev "use" environment.
default = { solve-group = "default" }
# Dev env extends the default stack with contributor and docs tooling.
dev = { features = ["dev"], solve-group = "default" }
# Docs env is intentionally isolated from the default CUDA/ML stack.
docs = { features = ["docs"], solve-group = "docs", no-default-feature = true }
